# MyRustApp

./: Cargo.toml  README.md
RustApp/: .env  (+5 more)
RustAppBackup/: .dockerignore  .gitignore  .log4brains.yml  Cargo.toml  Makefile  recipe.json  terraform.tfstate
RustAppBackup/.cargo/: config.toml
RustAppBackup/aws/: cloudformation.yaml
RustAppBackup/db/migrations/employee/2025-03-07-153809_create_employee_divisions_table/: down.sql  up.sql
RustAppBackup/db/migrations/employee/2025-03-07-153822_create_employee_departments_table/: down.sql
RustAppBackup/db/migrations/employee/2025-03-07-153852_create_employee_positions_table/: down.sql
RustAppBackup/db/migrations/employee/2025-03-07-153853_create_employees_table/: down.sql
RustAppBackup/db/migrations/employee/2025-03-07-153854_create_employee_projects_table/: down.sql
RustAppBackup/db/migrations/mail/2025-03-07-153912_create_mails_table/: up.sql
RustAppBackup/db/migrations/project/2025-03-07-153938_create_project_statuses_table/: down.sql
RustAppBackup/db/migrations/project/2025-03-07-153939_create_projects_table/: up.sql
RustAppBackup/db/migrations/project/2025-03-08-001325_create_project_survey_questions_table/: up.sql
RustAppBackup/db/migrations/project/2025-03-08-001519_create_project_survey_feedbacks_table/: down.sql  up.sql
RustAppBackup/db/migrations/stock/2024-06-01-105823_create_transactions_table/: up.sql
RustAppBackup/db/migrations/stock/2024-06-02-165713_create_pemantauan_khusus_table/: up.sql
RustAppBackup/db/migrations/stock/2024-06-16-010304_create_index_on_transactions_table/: down.sql  up.sql
RustAppBackup/deployments/jenkins-agent/: jenkins-agent-deployment.yaml
RustAppBackup/docs/adr/: 20230624-implementasi-microservices-architecture.md  index.md
RustAppBackup/docs/pemantauan_khusus/: Efek Pada Papan Pemantauan Khusus-20211214-20241214.xlsx  ~$Efek Pada Papan Pemantauan Khusus-20211214-20241214.xlsx
RustAppBackup/docs/readme/: api-user.md  api.md  env.md  erd.md
RustAppBackup/docs/ringkasan_indeks/: Ringkasan Indeks-20241213.xlsx
RustAppBackup/docs/ringkasan_saham/2024/10/: Ringkasan Saham-20241002.xlsx  Ringkasan Saham-20241007.xlsx  Ringkasan Saham-20241008.xlsx  Ringkasan Saham-20241009.xlsx  Ringkasan Saham-20241010.xlsx  Ringkasan Saham-20241014.xlsx  Ringkasan Saham-20241017.xlsx  Ringkasan Saham-20241021.xlsx  Ringkasan Saham-20241022.xlsx  Ringkasan Saham-20241025.xlsx  Ringkasan Saham-20241028.xlsx  Ringkasan Saham-20241029.xlsx  Ringkasan Saham-20241030.xlsx  Ringkasan Saham-20241031.xlsx
RustAppBackup/docs/ringkasan_saham/2024/11/: Ringkasan Saham-20241104.xlsx  Ringkasan Saham-20241105.xlsx  Ringkasan Saham-20241106.xlsx  Ringkasan Saham-20241107.xlsx  Ringkasan Saham-20241114.xlsx  Ringkasan Saham-20241121.xlsx  Ringkasan Saham-20241122.xlsx  Ringkasan Saham-20241125.xlsx  Ringkasan Saham-20241129.xlsx
RustAppBackup/docs/ringkasan_saham/2024/12/: Ringkasan Saham-20241206.xlsx  Ringkasan Saham-20241209.xlsx  Ringkasan Saham-20241212.xlsx  Ringkasan Saham-20241213.xlsx
RustAppBackup/docs/ringkasan_saham/2024/8/: Ringkasan Saham-20240801.xlsx  Ringkasan Saham-20240806.xlsx  Ringkasan Saham-20240807.xlsx  Ringkasan Saham-20240808.xlsx  Ringkasan Saham-20240813.xlsx  Ringkasan Saham-20240814.xlsx  Ringkasan Saham-20240815.xlsx  Ringkasan Saham-20240828.xlsx  (+1 more)
RustAppBackup/docs/rust/: swagger.json
RustAppBackup/pkg/date/: naive_date.rs
RustAppBackup/pkg/db/mongodb/: mongodb.rs
RustAppBackup/pkg/kafka/: kafka.rs
RustAppBackup/pkg/response/: response.rs
RustAppBackup/pkg/swagger/: swagger.rs
RustAppBackup/scripts/: docker-asset.sh  docker-build-image.sh  docker-inspect.sh  docker-push.sh  docker-run.sh  docker.sh  ecr-image-tag-version.sh  ecr-remove-image.sh
RustAppBackup/src/: handlers.rs  schema.rs
RustAppBackup/src/api/: default.rs
RustAppBackup/src/db/connection/: postgres.rs
RustAppBackup/src/duuid/: repository.rs  service.rs
RustAppBackup/src/error/: error.rs
RustAppBackup/src/middleware/: oauth2.rs
RustAppBackup/src/oauth/: authorize.rs  clients.rs  scopes.rs
RustAppBackup/src/repositories/: auth.rs  mod.rs  repository.rs
RustAppBackup/src/routes/: route.rs
RustAppBackup/src/routes/api/: route.rs
RustAppBackup/src/routes/web/: route.rs
RustAppBackup/src/utils/: utils.rs
(+29184 files in other folders)
